fixed blue contrast and link rel

--- a/portfolio/css/index.css
+++ b/portfolio/css/index.css
@@ -100,7 +100,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #1e88e5;
+  color: #1978cc;
   text-decoration: none;
 }
 
